# geotorch

./: .coverage  .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/scripts/: check_dist.py
.github/workflows/: build.yml  config.yml  coverage.yml  os_versions.yml  pypi.yml  python_versions.yml
docs/: README.md
docs/source/: conf.py  constraints.rst  constructions.rst  geotorch.rst  grassmannian.rst  index.rst  intro.rst  lowrank.rst  modules.rst  product.rst  reals.rst  skew.rst  so.rst  spelling_wordlist.txt  sphere.rst  stiefel.rst  sym.rst  symmetric.rst
docs/source/invertibility/: glp.rst  index.rst  sl.rst
docs/source/psd/: index.rst  (+4 more)
examples/: copying_problem.py  eigenvalue.py  parametrisations.ipynb  sequential_mnist.py
geotorch/: __init__.py  almostorthogonal.py  constraints.py  constructions.py  exceptions.py  fixedrank.py  glp.py  grassmanian.py  grassmannian.py  hurwitz.py  lowrank.py  manifold.py  parametrize.py  product.py  psd.py  psdlowrank.py  pssd.py  pssdfixedrank.py  pssdlowrank.py  reals.py  skew.py  sl.py  so.py  sphere.py  stiefel.py  sym.py  symmetric.py  utils.py
geotorch/linalg/: expm.py
mantorch/: :q  example.py  grassmanian.py  lowrank.py  manifold.py  orthogonal.py  reals.py  skew.py  so.py  sphere.py  stiefel.py
mantorch/linalg/: expm.py
test/: test_almostorthogonal.py  test_constraints.py  test_glp.py  test_grassmannian.py  test_homogeneity.py  test_hurwitz.py  test_integration.py  test_linalg.py  test_lowrank.py  test_manifold.py  test_orthogonal.py  test_positive_semidefinite.py  test_product.py  test_skew.py  test_sl.py  test_sphere.py  test_stiefel.py  test_sym.py  test_symmetric.py
(+13 files in other folders)
